# ipcamera

./: .gitignore  README.md  config.json  main.py  pyproject.toml  runner.sh
utils/: motion_camera.py  nn.py  utils.py
